Fix small layout issues, move style to external css

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -128,7 +128,6 @@ header .intro-text .skills {
 .navbar-custom .navbar-toggle {
   color: lightgray;
   text-transform: uppercase;
-  font-size: 5px;
   border-color: white;
 }
 .navbar-custom .navbar-toggle:hover,
@@ -159,15 +158,15 @@ header .intro-text .skills {
   }
 }
 section {
-  padding: 0 0 100px 0;
+  padding: 0 0 50px 0;
 }
 section h2 {
   margin: 0;
   font-size: 3em;
 }
 section.success {
-  background: #ffffff;
   color: black;
+  padding-top: 75px;
 }
 @media (max-width: 767px) {
   section {
@@ -503,6 +502,7 @@ fieldset[disabled] .btn-success.active {
 
 .navbar-brand {
   padding: 0 0 60px 0;
+  margin-left: 20px;
 }
 
 #bs-example-navbar-collapse-1 {
@@ -518,5 +518,24 @@ fieldset[disabled] .btn-success.active {
 @media (min-width: 1200px) {
   .col-lg-offset-2 {
       margin-left: 7.666667%;
+  }
+}
+.aboutme-img {
+  text-align: center;
+  padding-bottom: 20px;
+}
+
+.aboutme-text {
+  clear: both;
+}
+
+@media (min-width: 767px) {
+  .aboutme-img {
+    float:left;
+    padding-right:60px;
+  }
+  .aboutme-text {
+    display: table-cell;
+    text-align:left;
   }
 }
